# binance-avg

./: CMakeLists.txt  Readme.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  average_monoid.cpp  average_monoid.hpp  book.cpp  book.hpp  collector.cpp  collector.hpp  consumer.cpp  consumer.hpp  main.cpp
src/model/: ask.cpp  ask.hpp  bid.cpp  bid.hpp  depth_update.cpp  depth_update.hpp  order.cpp  order.hpp
src/tests/: average_monoid_test.cpp  book_test.cpp
src/utils/: interval_timer.cpp  interval_timer.hpp  thread_pull.hpp
